# ProjectC

./: README.md
Employee Management System/: CMakeLists.txt  README.md  main.cpp
Employee Management System/Head File/: boss.h  employee.h  manager.h  worker.h  workerManager.h
Employee Management System/Save/: empFile.txt
Employee Management System/Source File/: employee.cpp  main.cpp
Employee Management System/include/: boss.h  employee.h  manager.h  worker.h  workerManager.h
Employee Management System/src/: Manager.cpp  boss.cpp  worker.cpp  workerManager.cpp
